add transaction stuff
