# internal/domain/external_transaction_response.go
@@ -1,0 +1,5 @@
+package domain
+
+type ExternalTransactionResponse struct {
+	Id string `json:"transaction_id"`
+}
